# aoc-2022-ocaml

./: README.md  aoc2022.opam  dune-project
lib/: day01.ml
