(lang dune 3.10)

(name aoc2022)

(generate_opam_files true)

(source
 (github fstiffo/aoc-2022-ocaml))

(authors "Francesco Stiffoni")

(maintainers "")

(license MIT)

(documentation https://github.com/fstiffo/aoc-2022-ocaml)

(package
 (name aoc2022)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
